# sim-hl7

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
config/: hl7_config.xml  hl7_config_example.xml
db/: init_db.sql  odbc.ini
db/docker-entrypoint-initdb.d/: 00-load-init-db.sql  init_db.sql
output/: ORU_P001_A123_20250518132016.xml
src/: main.cpp
src/config_manager/: ConfigManager.cpp  ConfigManager.h
src/db_connector/: DatabaseService.cpp  DatabaseService.h
src/dicom_parser/: DicomParser.cpp  DicomParser.h
src/hl7_generator/: HL7MessageGenerator.cpp  HL7MessageGenerator.h
src/models/: Patient.h  Study.h
src/ui/: ConsoleUI.cpp  ConsoleUI.h
